Add navigation view

--- a/MaterialDesignPro4/app/src/main/res/values/styles.xml
+++ b/MaterialDesignPro4/app/src/main/res/values/styles.xml
@@ -7,5 +7,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="MyToolBarTheme" parent="Theme.MaterialComponents.Light">
+        <!-- text color of toolbar and text in a pop up menu -->
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <!-- color of overflow menu and icons in navigation drawer and toolbar -->
+        <item name="android:textColorSecondary">@android:color/white</item>
+    </style>
+    <style name="MyPopUpMenu" parent="Theme.MaterialComponents.Light">
+        <item name="background">@color/background</item>
+        <item name="android:textColorPrimary">@color/textColorPrimary</item>
+    </style>
 </resources>
