--- a/MaterialDesignPro4/app/src/main/res/values/colors.xml
+++ b/MaterialDesignPro4/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="background">#E8F5E9</color>
+    <color name="textColorPrimary">#455A64</color>
 </resources>
