--- a/MaterialDesignPro4/app/src/main/res/layout/activity_main.xml
+++ b/MaterialDesignPro4/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,24 @@
     android:fitsSystemWindows="true"
     android:id="@+id/DrawerMain"
     tools:context=".MainActivity">
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical">
+       <include
+           android:id="@+id/toolbar"
+           layout="@layout/toolbar"
+           />
+   </LinearLayout>
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar"
-
-        />
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationMain"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:headerLayout="@layout/header"
         app:itemIconTint="#8C000000"
         app:itemTextColor="#E6000000"
+        android:layout_gravity="start"
         app:menu="@menu/menu_items"
         >
 
