--- a/MaterialDesignPro4/app/src/main/res/layout/toolbar.xml
+++ b/MaterialDesignPro4/app/src/main/res/layout/toolbar.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:minHeight="?android:attr/actionBarSize"
-
+    android:layout_alignParentTop="true"
     app:popupTheme="@style/MyPopUpMenu"
     app:theme="@style/MyToolBarTheme"
     xmlns:app="http://schemas.android.com/apk/res-auto"
